--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "brunch build --production"
   },
   "dependencies": {
-    "phaser": "^2.6.2"
+    "phaser": "^2.6.2",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "auto-reload-brunch": "^2",
