--- a/front/package.json
+++ b/front/package.json
@@ -10,7 +10,7 @@
     "build": "brunch build --production"
   },
   "dependencies": {
-    "phaser": "^2.6.2",
+    "phaser-ce": "^2.9.3",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
